--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,21 @@
 spring.application.name=api-spring-security
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/security
-spring.datasource.username=root
-spring.datasource.password=root
+jwt.public.key = classpath:app.pub
+jwt.private.key = classpath:app.key
+
+spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/security
+#spring.datasource.username=root
+#spring.datasource.password=root
+spring.datasource.url=jdbc:h2:mem:teste
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=false
+#spring.h2.console.path=/h2
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 server.port=8081
 
-jwt.public.key = classpath:app.pub
-jwt.private.key = classpath:app.key
+
